# llm-washing-machine-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.aux  main.bbl  main.blg  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: data_stats.tex  metrics.tex
paper_search_results/: abstracts_chunk1.txt  washing_machine_concept_representation_in_large_language_models_20260207_183843.jsonl  washing_machine_concept_representation_in_large_language_models_20260207_183936.jsonl
papers/: README.md
papers/pages/: 2209.10652_toy_models_of_superposition_manifest.txt  2210.03575_are_representations_built_from_the_ground_up_manifest.txt  2309.16042_best_practices_activation_patching_manifest.txt  2406.04093_scaling_and_evaluating_sparse_autoencoders_manifest.txt  2408.05147_gemma_scope_manifest.txt  2409.04185_residual_stream_analysis_with_multi_layer_saes_manifest.txt  (+2 more)
results/: data_stats.json  env.json  examples.json  metrics.json
src/: run_experiments.py
